Escape string inserted into a regex or LIKE pattern.