@@ -1,13 +1,14 @@
 package org.moera.node.util;
 
-import java.io.UnsupportedEncodingException;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.time.LocalDateTime;
 import java.time.temporal.ChronoUnit;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.HashSet;
 import java.util.Set;
+import java.util.regex.Pattern;
 
 import com.github.jknack.handlebars.Handlebars.SafeString;
 import com.ibm.icu.util.Calendar;
@@ -17,11 +18,7 @@ import org.springframework.web.util.HtmlUtils;
 public class Util extends org.moera.commons.util.Util {
 
     public static String ue(Object s) {
-        try {
-            return URLEncoder.encode(s.toString(), "UTF-8");
-        } catch (UnsupportedEncodingException e) {
-            return "ue:" + e.getMessage();
-        }
+        return URLEncoder.encode(s.toString(), StandardCharsets.UTF_8);
     }
 
     public static SafeString he(Object s) {
@@ -29,6 +26,14 @@ public class Util extends org.moera.commons.util.Util {
             return new SafeString("");
         }
         return s instanceof SafeString ? (SafeString) s : new SafeString(HtmlUtils.htmlEscape(s.toString()));
+    }
+
+    public static String le(Object s) {
+        return s != null ? s.toString().replace("%", "%%") : null;
+    }
+
+    public static String re(Object s) {
+        return s != null ? Pattern.quote(s.toString()) : null;
     }
 
     public static void copyToCalendar(LocalDateTime dateTime, Calendar calendar) {
